# snocat

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE.md  README.md  release.toml  rust-toolchain
.github/workflows/: ci.yml
.scripts/: NOTICE_template.md  install_git_hooks.sh  license_headers.sh  noticegen.sh  run-integration-tests.sh
.scripts/git_hooks/: pre-commit
axl/: Cargo.toml
axl-cli/: Cargo.toml
axl-cli/src/: certgen.rs  client.rs  main.rs  server.rs
axl/src/: certgen.rs  client.rs  common.rs  lib.rs
axl/src/common/: authentication.rs  ffi.rs  mod.rs  vtdroppable.rs
axl/src/common/authentication/: delegated_authentication.rs  mod.rs  no_op_authentication.rs  simple_ack_authentication.rs  traits.rs
axl/src/server/: authentication.rs  deferred.rs  mod.rs  routing.rs
axl/src/util/: delegation.rs  framed.rs  mod.rs  validators.rs
snocat/: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE.md  README.md  build.rs
snocat-cli/: CHANGELOG.md  Cargo.toml  NOTICE.md  README.md
snocat-cli/src/: certgen.rs  client.rs  main.rs  server.rs
snocat-cli/src/services/: demand_proxy.rs  mod.rs
snocat/src/: client.rs  lib.rs  proxy_server.rs
snocat/src/common/: ffi.rs  mod.rs  routing.rs
snocat/src/common/authentication/: delegated_authentication.rs  mod.rs  no_op_authentication.rs  simple_ack_authentication.rs  traits.rs
snocat/src/common/daemon/: mod.rs
snocat/src/common/protocol/: address.rs  mod.rs  negotiation.rs  proxy_tcp.rs  request_handler.rs  traits.rs  tunnel.rs
snocat/src/common/protocol/service/: mod.rs
snocat/src/common/protocol/tunnel/: duplex.rs  id.rs  mod.rs  quinn_tunnel.rs
snocat/src/common/protocol/tunnel/registry/: cache.rs  local.rs  mapped.rs  memory.rs  mod.rs  redis.rs  serialized.rs
snocat/src/common/tunnel_source/: mod.rs
snocat/src/ext/: mod.rs  option.rs  result.rs  stream.rs
snocat/src/ext/future/: delayed.rs  mod.rs  poll_until.rs  tracked.rs
snocat/src/ext/try_stream/: mod.rs  try_fuse_stream.rs
snocat/src/ffi/: allocators.rs  delegation.rs  dto.rs  errors.rs  eventing.rs  ffi_delegation.rs  foreign_drop.rs  mod.rs  proto.rs  reactor.rs
snocat/src/ffi/delegation/: mod.rs  proto.rs
snocat/src/ffi/eventing/: mod.rs  proto.rs
snocat/src/proto/: delegation.proto  eventing.proto  ffi.proto
snocat/src/server/: deferred.rs  mod.rs  modular.rs
snocat/src/util/: cancellation.rs  delegation.rs  dropkick.rs  framed.rs  mapped_owned_async_mutex.rs  merge_streams.rs  messenger.rs  mod.rs  tunnel_stream.rs  validators.rs  vtdroppable.rs
src/: certgen.rs  client.rs  common.rs  main.rs  server.rs  util.rs
src/server/: deferred.rs  mod.rs
src/util/: merge_streams.rs  mod.rs
