[package]
name = "axl"
description = "Asynchronous Cross-Link - Reverse TCP Tunnel"
version = "0.1.0"
authors = ["Zoey <Dessix@Dessix.net>"]
edition = "2018"

[dependencies]
anyhow = "^1.0.33"
async-signals = "0.3.1"
async-stream = "0.3.0"
clap = "2.33.3"
async-compat = "0.1.4"
async-std = { version = "1.6", features=["attributes"] }
futures = "0.3"
futures-io = "0.3"
gen-z = "^0.1.0"
libc = "0.2.79"
quinn = "0.6"
rcgen = "0.8"
tracing = "^0.1.21"
tracing-futures = "^0.2.4"
trust-dns-client = "^0.19.5"
tokio = { version = "^0.2.22", features=["tcp", "mio", "io-util", "io-driver", "signal", "stream", "macros"] }
triggered = "0.1.1"
yamux = "0.8"
mio = { version = "0.6.22" }

[dev-dependencies]
futures-test = { version = "0.3" }
