[package]
name = "snocat-cli"
description = "Streaming Network Overlay Connection Arbitration Tunnel"
version = "0.3.0-alpha.2"
authors = ["Microsoft Corporation", "Zoey <Dessix@Dessix.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/microsoft/snocat"
categories = ["network-programming", "command-line-utilities"]
include = ["src/**/*", "build.rs", "Cargo.toml", "LICENSE*", "*.md"]

[dependencies]
snocat = { version= "^0.3.0-alpha.2"}
anyhow = "~1.0.43"
downcast-rs = "^1.2.0"
clap = "~2.33.3"
futures = "^0.3.17"
futures-io = "^0.3.17"
gen-z = "~0.1.0"
log = "~0.4.13"
quinn = "~0.7.2"
rcgen = "0.8"
thiserror = "1.0.29"
tracing = "~0.1.27"
tracing-futures = "~0.2.5"
tracing-subscriber = "~0.2.22"
tokio = { version="^1.11.0", features=["net", "io-util", "signal", "macros"] }
tokio-stream = { version="^0.1.7", features=["net", "io-util"] }
tokio-util = { version="^0.6.8", features=[] }
