[package]
name = "snocat"
description = "Streaming Network Overlay Connection Arbitration Tunnel"
version = "0.6.0-alpha.11"
rust-version = "1.63.0"
authors = ["Microsoft Corporation", "Zoey <Dessix@Dessix.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/microsoft/snocat"
categories = ["network-programming"]
include = ["src/**/*", "build.rs", "Cargo.toml", "LICENSE*", "*.md"]

[dependencies]
arc-swap = "1.5"
anyhow = "~1.0.43"
dashmap = "5.1"
downcast-rs = "1.2"
fred = { version = "4.3", features=["enable-tls", "tracing"], optional = true }
futures = "0.3.21"
gen-z = "0.1"
log = "0.4"
quinn = "0.8"
rustls = "0.20"
rustls-pemfile = "0.3"
serde = { version = "1.0.128", features=["derive"] }
serde_json = "~1.0.66"
thiserror = "1.0.37"
tracing = "0.1.31"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.9", features=["env-filter"] }
tokio = { version = "1.17", features=["net", "io-util", "signal", "sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features=["net", "io-util", "sync"] }
tokio-util = { version = "0.7", features=["default", "io", "time"] }
uuid = { version = "0.8", features=["v4", "v5", "serde"] }

[dev-dependencies]
mockall = { version = "0.11", features=["nightly"] }

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["core"]
core = []
redis-store = ["fred"]
backtrace = ["default", "core"]

full = ["core", "redis-store"]

integration-redis = ["redis-store"]
