[package]
name = "snocat"
description = "Streaming Network Overlay Connection Arbitration Tunnel"
version = "0.8.0-alpha.5"
rust-version = "1.63.0"
authors = ["Microsoft Corporation", "Zoey <Dessix@Dessix.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/microsoft/snocat"
categories = ["network-programming"]
include = ["src/**/*", "build.rs", "Cargo.toml", "LICENSE*", "*.md"]

[dependencies]
arc-swap = "1.5"
anyhow = "~1.0.43"
dashmap = "5.4"
downcast-rs = "1.2"
fred = { version = "6", default-features = false, features = [], optional = true }
futures = "0.3.21"
log = "0.4"
pin-project-lite = "0.2"
quinn = "0.10.2"
rustls = "0.21"
rustls-pemfile = "~1.0.1"
serde = { version = "1.0.128", features=["derive"] }
serde_json = "~1.0.66"
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-futures = "0.2.5"
tokio = { version = "1.25", features=["net", "io-util", "signal", "sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features=["net", "io-util", "sync"] }
tokio-util = { version = "0.7", features=["default", "io", "time"] }
uuid = { version = "1.3", features=["v4", "v5", "serde"] }

[dev-dependencies]
mockall = { version = "0.11", features=["nightly"] }
tracing-subscriber = { version = "0.3.16", features=["env-filter"] }

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["core"]
core = []
redis-store = ["fred"]
backtrace = ["default", "core"]

full = ["core", "redis-store"]

integration-redis = ["redis-store"]
